<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#52a3cf"-->
<!--    android:gravity="center"-->
<!--    tools:context=".activity.DangNhapActivity">-->
<!--    <LinearLayout-->
<!--        android:background="#ffff"-->
<!--        android:layout_width="300dp"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_height="500dp">-->
<!--        <TextView-->
<!--            android:layout_margin="5sp"-->
<!--            android:background="#00ffa1"-->
<!--            android:gravity="center"-->
<!--            android:fontFamily="serif"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="#001aff"-->
<!--            android:textSize="25sp"-->
<!--            android:text="Đăng Nhập"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="100sp" />-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_margin="5sp"-->

<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <EditText-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:id="@+id/edittexttendangnhap"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold"-->
<!--                android:hint="Email Hoặc Số Điện Thoại"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_margin="5sp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <EditText-->
<!--                android:inputType="textPassword"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:id="@+id/edittextmatkhau"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold"-->
<!--                android:hint="Mật Khẩu"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp">-->
<!--        <Button-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="#0022ff"-->
<!--            android:id="@+id/buttondangnhap"-->
<!--            android:gravity="center"-->
<!--            android:background="#6193de"-->
<!--            android:text="Đăng Nhập"-->
<!--            android:layout_width="130dp"-->
<!--            android:layout_height="50dp" />-->

<!--    </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp">-->
<!--            <Button-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="#0022ff"-->
<!--                android:id="@+id/buttondangky"-->
<!--                android:gravity="center"-->
<!--                android:background="#6193de"-->
<!--                android:text="Đăng Ký"-->
<!--                android:layout_width="130dp"-->
<!--                android:layout_height="50dp" />-->

<!--        </LinearLayout>-->
<!--        <TextView-->
<!--            android:textColor="#ff00"-->
<!--            android:id="@+id/textviewcanhbaodangnhap"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </LinearLayout>-->



<!--</LinearLayout>-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".activity.DangNhapActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/app_logo_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/text_signin_message"
                android:textColor="#696969"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittexttendangnhap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_username"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittextmatkhau"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>



            <Button
                android:id="@+id/buttondangnhap"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/button_sign_in" />

            <LinearLayout
                android:id="@+id/social_layout"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_signin_social_media"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_facebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <ImageView
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_twitter"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                style="@style/TextyButton"
                android:id="@+id/buttondangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"

                android:text="@string/text_signin_signup" />
            <TextView
                android:textColor="#ff00"
                android:id="@+id/textviewcanhbaodangnhap"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>